# algojo

./: .clang-format  .gitignore  Makefile  README.md  go.mod  main.go  pyproject.toml  template.py
go/: .gitignore  go.mod  main.go
hackerrank/: a_very_big_sum_test.go  birthday_cake_candles_test.go  diagonal_difference_test.go  mini_max_sum.go  mini_max_sum_test.go  plus_minus.go  plus_minus_test.go  simple_array_sum.go  simple_array_sum_test.go  solve_me_first_test.go  staircase.go
happyfresh/: mystery_algo.go  shopping_cart.go
interview_prep/: microservices-architecture.excalidraw
leetcode/: 1-two_sum.go  1009-complement_of_base_10_integer.go  1029-convert-binary-number-in-a-linked-list-to-integer.go  1032-stream_of_characters.go  1200-minimum_absolute_difference.go  13-roman_to_integer.go  1306-jump_game_iii.go  14-longest_common_prefix.go  143-reorder_list.go  147-insertion_sort_list.go  167-two_sum_ii_input_array_is_sorted.go  189-rotate_array.go  19-remove_nth_node_from_end_of_list.go  20-valid_parentheses.go  21-merge_two_sorted_lists.go  221-maximal-square.go  231-power_of_two.go  26-remove_duplicate_from_sorted_array.go  27-remove_element.go  278-first_bad_version.go  28-implement_strstr.go  283-move_zeroes.go  3-longest_substring_without_repeating_characters.go  337-house_robber_iii.go  344-reverse_string.go  35-search_insert_position.go  416-partition_equal_subset_sum.go  53-maximum_subarray.go  557-reverse_words_in_a_string_iii.go  563-binary_tree_tilt.go  567-permutation_in_string.go  58-length_of_last_world.go  (+13 more)
rust/rust-examples/: Cargo.toml
(+695 files in other folders)
