[tool.isort]
profile = "black"
line-length = 120
multi_line_output = 3
force_grid_wrap = 0

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "D"]
ignore = ["D100"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.poetry]
package-mode = false

[project]
name = "algojo"
version = "0.1.0"
description = ""
authors = [
    {name = "Arief Putra",email = "sibuearief@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "black[jupyter] (>=25.1.0,<26.0.0)",
    "ruff (>=0.12.3,<0.13.0)",
    "pydocstyle (>=6.3.0,<7.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "docformatter (>=1.7.7,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
