[package]
name = "rust-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "1-hello_world"
path = "src/bin/1-hello_world.rs"

[[bin]]
name = "1-2-formatted_print"
path = "src/bin/1-2-formatted_print.rs"
